# milvus-sdk-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  Makefile  OWNERS  README.md  codecov.yml  conanfile.py  libmilvus.spec.rpkg
examples/: CMakeLists.txt  README.md  example.md
examples/array/: CMakeLists.txt  main.cpp
examples/db/: main.cpp
examples/dml/: CMakeLists.txt  main.cpp
examples/fp16/: main.cpp
examples/general/: main.cpp
examples/hybrid_search/: main.cpp
examples/json/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
examples/src/: array.cpp  db.cpp  default_value.cpp  dml.cpp  dynamic_field.cpp  filter_template.cpp  full_text_match.cpp  general.cpp  group_by.cpp  hybrid_search.cpp  iterator_query.cpp  iterator_search.cpp  json.cpp  nullable_field.cpp  partition_key.cpp  rbac.cpp  run_analyzer.cpp  text_match.cpp  vector_binary.cpp  vector_fp16.cpp  vector_sparse.cpp
examples/src/v1/: array.cpp  db.cpp  default_value.cpp  dml.cpp  dynamic_field.cpp  filter_template.cpp  full_text_match.cpp  general.cpp  group_by.cpp  hybrid_search.cpp  iterator_query.cpp  iterator_search.cpp  json.cpp  nullable_field.cpp  partition_key.cpp  rbac.cpp  text_match.cpp  vector_binary.cpp  vector_fp16.cpp  vector_sparse.cpp
examples/src/v2/: add_field.cpp  array.cpp  cdc.cpp  db.cpp  default_value.cpp  dml.cpp  dynamic_field.cpp  external_table.cpp  filter_template.cpp  full_text_match.cpp  general.cpp  geometry_field.cpp  group_by.cpp  highlighter.cpp  hybrid_search.cpp  iterator_query.cpp  iterator_search.cpp  json.cpp  minhash_function.cpp  multi_analyzer.cpp  nullable_field.cpp  nullable_vector.cpp  optimize.cpp  order_by.cpp  partition_key.cpp  rbac.cpp  rerank_function.cpp  run_analyzer.cpp  search_aggregation.cpp  simple.cpp  snapshot.cpp  struct_field.cpp  text_match.cpp  timestamptz_field.cpp  vector_binary.cpp  vector_fp16.cpp  vector_int8.cpp  vector_sparse.cpp
examples/util/: ExampleUtils.h
examples/utils/: ExampleUtils.h
examples/vector_binary/: main.cpp
examples/vector_sparse/: main.cpp
src/: CMakeLists.txt
src/impl/: BulkImport.cpp  DmlUtils.cpp  DmlUtils.h  GtsDict.cpp  MilvusClientImpl.cpp  MilvusClientImpl.h  MilvusClientImplV2.cpp  MilvusClientImplV2.h  MilvusClientV2Impl.cpp  MilvusClientV2Impl.h  MilvusClientV2SessionImpl.cpp  MilvusClientV2SessionImpl.h  MilvusConnection.cpp  MilvusConnection.h  MilvusInterceptor.cpp  MilvusInterceptor.h  Status.cpp  TypeUtils.cpp  TypeUtils.h  version.h.in
src/impl/param/: Field.cpp
src/impl/types/: AliasDesc.cpp  AnalyzerResults.cpp  AnnSearchRequest.cpp  CalcDistanceArguments.cpp  CollectionDesc.cpp  CollectionInfo.cpp  CollectionSchema.cpp  CollectionStat.cpp  CompactionState.cpp  ConnectParam.cpp  DatabaseDesc.cpp  DmlResults.cpp  EmbeddingList.cpp  FieldData.cpp  FieldPartialUpdateOp.cpp  FieldSchema.cpp  FileResourceInfo.cpp  FloatUtils.cpp  Function.cpp  FunctionScore.cpp  GetArguments.cpp  Highlighter.cpp  HybridSearchArguments.cpp  HybridTimestamp.cpp  IDArray.cpp  IndexDesc.cpp  IteratorArguments.cpp  ListAliasesResult.cpp  LoadState.cpp  NodeInfo.cpp  OptimizeTask.cpp  OrderByField.cpp  PartitionInfo.cpp  PartitionStat.cpp  PrivilegeGroupInfo.cpp  ProgressMonitor.cpp  QueryArguments.cpp  QueryIteratorImpl.cpp  QueryIteratorImpl.h  QueryResults.cpp  (+26 more)
src/impl/utils/: CompareUtils.cpp  CompareUtils.h  ConnectionHandler.cpp  ConnectionHandler.h  Constants.cpp  Constants.h  DmlUtils.cpp  DmlUtils.h  DqlUtils.cpp  DqlUtils.h  ExtraParamUtils.h  FP16.cpp  FieldDataSchema.h  GtsDict.cpp  GtsDict.h  MiscUtils.cpp  MiscUtils.h  RpcUtils.cpp  RpcUtils.h  TypeUtils.cpp  TypeUtils.h  Uri.cpp  Uri.h
src/include/: MilvusClient.h  Status.h
src/include/milvus/: BulkImport.h  Export.h  MilvusClient.h  MilvusClientV2.h  MilvusClientV2Session.h  Status.h
src/include/param/: BaseParam.h  Field.h
src/include/types/: .CollectionSchema.h.un~  CalcDistanceArguments.h  CollectionDesc.h  CollectionInfo.h  CollectionSchema.h  CollectionStat.h  CompactionPlan.h  CompactionState.h  (+17 more)
src/proto-gen/: proto-gen.cmake
test/: CMakeLists.txt
test/it/: TestAddPrivilegesToGroup.cpp  TestAlias.cpp  TestAlterAlias.cpp  TestAlterCollection.cpp  TestAlterDatabaseProperties.cpp  TestAlterIndex.cpp  TestCalcDistance.cpp  TestCompact.cpp  TestConnection.cpp  TestCreateAlias.cpp  TestCreateCollection.cpp  TestCreateCredential.cpp  TestCreateDatabase.cpp  TestCreateIndex.cpp  TestCreateParition.cpp  TestCreatePartition.cpp  TestCreatePrivilegeGroup.cpp  TestCreateResourceGroup.cpp  TestCreateRole.cpp  TestCreateUser.cpp  TestCredential.cpp  TestDelete.cpp  TestDeleteCredential.cpp  TestDescribeAlias.cpp  TestDescribeCollection.cpp  TestDescribeDatabase.cpp  TestDescribeIndex.cpp  TestDescribeResourceGroup.cpp  TestDescribeRole.cpp  TestDescribeUser.cpp  TestDropAlias.cpp  TestDropCollection.cpp  TestDropCollectionProperties.cpp  TestDropDatabase.cpp  TestDropDatabaseProperties.cpp  TestDropIndex.cpp  TestDropIndexProperties.cpp  TestDropParition.cpp  TestDropPartition.cpp  TestDropPrivilegeGroup.cpp  (+52 more)
test/st/: Main.cpp  MilvusContainerEnv.h  MilvusDockerServer.cpp  MilvusDockerServer.h  MilvusServerTest.cpp  MilvusServerTest.h  PythonMilvusServer.cpp  PythonMilvusServer.h  TestCollection.cpp  TestConnectWithTls.cpp  TestConnectWithUser.cpp  TestGeneric.cpp  TestSearch.cpp  TestSearchWithBinaryVectors.cpp  TestcontainersMilvus.cpp  TestcontainersMilvus.h  milvus_container.py
test/ut/: TestBulkImport.cpp  TestCalcDistanceArguments.cpp  TestCollectionInfo.cpp  TestCollectionSchema.cpp  TestCollectionStat.cpp  TestCompactionPlan.cpp  TestCompactionState.cpp  TestConnectParam.cpp  TestDmlUtils.cpp  TestDqlUtils.cpp  TestDummy.cpp  TestField.cpp  TestFieldData.cpp  TestFieldSchema.cpp  TestFloatUtils.cpp  TestGtsDict.cpp  TestHybirdTimestamp.cpp  TestIDArray.cpp  TestIndexDesc.cpp  TestPartitionStat.cpp  TestProgressMonitor.cpp  TestQueryArguments.cpp  TestSearchArguments.cpp  TestSearchResults.cpp  TestSegmentInfo.cpp  TestStatus.cpp  TestTypeUtils.cpp
(+1521 files in other folders)
